--- a/index.html
+++ b/index.html
@@ -55,6 +55,20 @@
 		    color: white;
 		    background-color: white;
 		}
+      .screen {
+         font-size: 0.5em;
+         margin: 0;
+         background-color: red;
+         position: absolute;
+         width: 100%;
+         height: 19em;
+         left: 0;
+         top: 0;
+      }
+      body {
+         margin: 0;
+         padding: 0;
+      }
 		</style>
 
 		<!-- Javascript -->
@@ -227,122 +241,122 @@
 	<body>
 		<div class="spaces" style="float:left;margin-left:50px;">
          <div class="blank_small"></div>
-         <input id="leftWeight" readonly="readonly" style="margin-left: 50px; width: 80px" value=0></input>
-         <input id="rightWeight" readonly="readonly" style="margin-left: 148px; width: 80px" value=0></input>
+         <input id="leftWeight" readonly="readonly" style="margin-left: 40px; width: 100px;text-align: center;background: transparent;border: none; font-size: 50;" value=0></input>
+         <input id="rightWeight" readonly="readonly" style="margin-left: 128px; width: 100px;text-align: center;background: transparent;border: none; font-size: 50;" value=0></input>
          
          <div style="clear:both"></div>
          <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">1</div>
           <div class="blank"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">2</div>
           <div class="blank"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">3</div>
           <div class="blank"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">4</div>
           <div class="blank"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">5</div>
           <div class="blank"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">6</div>
           <div class="blank"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">7</div>
           <div class="blank"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">8</div>
           <div class="blank"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">9</div>
           <div class="blank"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">10</div>
           <div class="blank"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">11</div>
           <div class="blank"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">12</div>
           <div class="blank"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
 		    </div>
          </div>
 	</body>
