--- a/index.html
+++ b/index.html
@@ -240,6 +240,8 @@
 	</head>
 	<body>
 		<div class="spaces" style="float:left;margin-left:50px;">
+         <input id="leftWeight" readonly="readonly" style="margin-left: 100px; width: 400px;text-align: center;background: transparent;border: none; font-size: 50;" value="龍舟排槳位小工具"></input>
+         <div style="clear:both"></div>
          <div class="blank_small"></div>
          <input id="leftWeight" readonly="readonly" style="margin-left: 40px; width: 100px;text-align: center;background: transparent;border: none; font-size: 50;" value=0></input>
          <input id="rightWeight" readonly="readonly" style="margin-left: 128px; width: 100px;text-align: center;background: transparent;border: none; font-size: 50;" value=0></input>
