--- a/index.html
+++ b/index.html
@@ -243,122 +243,122 @@
          <input readonly="readonly" style="margin-left: 50px; width: 500px;text-align: center;background: transparent;border: none; font-size: 50;" value="龍舟排槳位小工具"></input>
          <div style="clear:both"></div>
          <div class="blank_small"></div>
-         <input id="leftWeight" readonly="readonly" style="margin-left: 15px; width: 150px;text-align: center;background: transparent;border: none; font-size: 50;" value=0></input>
-         <input id="rightWeight" readonly="readonly" style="margin-left: 78px; width: 150px;text-align: center;background: transparent;border: none; font-size: 50;" value=0></input>
+         <input id="leftWeight" readonly="readonly" style="margin-left: -10px; width: 200px;text-align: center;background: transparent;border: none; font-size: 50;" value=0></input>
+         <input id="rightWeight" readonly="readonly" style="margin-left: 29px; width: 200px;text-align: center;background: transparent;border: none; font-size: 50;" value=0></input>
          
          <div style="clear:both"></div>
          <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">1</div>
           <div class="blank"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">2</div>
           <div class="blank"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">3</div>
           <div class="blank"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">4</div>
           <div class="blank"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">5</div>
           <div class="blank"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">6</div>
           <div class="blank"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">7</div>
           <div class="blank"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">8</div>
           <div class="blank"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">9</div>
           <div class="blank"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">10</div>
           <div class="blank"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">11</div>
           <div class="blank"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
           <div class="blank"></div>
 		    <div class="squaredotted">12</div>
           <div class="blank"></div>
           <div class="square">
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="tel" id="weight_input"value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="number" id="weight_input"value="80"></input>
 		    </div>
          </div>
 	</body>
